# ticketer

./: .env  Cargo.toml  db.json
.github/workflows/: devskim-analysis.yml
src/: main.rs
src/application/: mod.rs  task_application.rs
src/domain/: ticket.rs
src/infrastructure/: calender.rs  database.rs  doubly_linked_list.rs  mod.rs
tests/usecase/: event_test.rs
